--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
+		"start": "node app.js",
+		"dev": "nodemon app.js",
 		"migrate": "node importData.js"
 	},
 	"author": "",
